--- a/app/app.css
+++ b/app/app.css
@@ -28,3 +28,28 @@
 	width: 20px;
 }
 
+.player-table {
+}
+
+.player-table-row div {
+  
+  /*text-align: left;*/
+}
+
+.player-table-head {
+  background-color: #2c7ac9;
+  color: white;
+  /*text-align: left;*/
+}
+
+.player-table-head-cell {
+  padding: 5px 10px;  
+}
+
+.player-table-cell {
+  padding: 10px;
+  border-bottom: 1px solid #e2e5e8;
+}
+
+
+
