--- a/app/app.css
+++ b/app/app.css
@@ -67,7 +67,7 @@
   text-align: center;
 }
 .modal-button:first-child {
-  border-right: 1px solid black;
+  border-right: 1px solid black;  
 }
 .military {
   background-color: #F62911;
@@ -97,6 +97,8 @@
   background-color: #3f3c3c;
 }
 
+/*
+swipe
 .view-animate-container {
   position:relative;
   height:100px!important;
@@ -115,8 +117,6 @@
 
   display:block;
   width:100%;
-  /*border-left:1px solid black;*/
-
   position:absolute;
   top:49px;
   left:0;
@@ -135,4 +135,13 @@
   left:-100%;
 }
 
+*/
+.view-animate.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
+}
+
+.view-animate.ng-enter.ng-enter-active {
+  opacity:1;
+}
 
