--- a/client/app.css
+++ b/client/app.css
@@ -1,6 +1,7 @@
 /* app css stylesheet */
 
 /* nav */
+
 .scroll {
   display: flex;
   flex-wrap: nowrap;
@@ -22,28 +23,23 @@
   flex: 0 0 auto;
 }
 
+.active {
+  border-bottom: 5px solid rgba(255, 255, 255, 0.5);
+}
+
 header {
   /*background: #152637*/;
 }
-
-.example-one-header,
- {
-  border-radius: 3px;
+.nav-container {
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
 }
 
-.logo {
-  text-align: center;
-  font-weight: 700;
-  color: #727c87;
-  border-right: 1px solid rgba(114, 124, 135, 0.4);
-  padding: 13px 24px 12px;
-}
-
-.logo,
 .nav-item {
+  font-size: 14px;
+  color: white;
   padding: 13px 16px 12px;
 }
-.logo:not(:last-child),
+
 .nav-item:not(:last-child) {
   border-right: 1px solid rgba(114, 124, 135, 0.2);
 }
@@ -58,14 +54,10 @@ body {
   line-height: 1.5;
 }
 
-.logo,
-.nav-item {
-  font-size: 14px;
-}
 
 .title {
   margin: 24px 0 6px;
-  font-size: 12px;
+  padding: 0 20px;
   text-transform: uppercase;
   letter-spacing: .2em;
   color: #999;
