--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,16 +1,15 @@
-<div class='container example-one'>
-  <div class='title'>7 WONDERS SCORE</div>
-  <header class='example-one-header scroll'>
+<div class='container nav-container'>
+  <header class='scroll'>
     <nav class='nav-flex'>
-      <span class='nav-item' ui-sref="players">Players</span>
-      <span class='nav-item' ui-sref="military">Military</span>
-      <span class='nav-item' ui-sref="treasury">Treasury</span>
-      <span class='nav-item' ui-sref="wonder">Wonder</span>
-      <span class='nav-item' ui-sref="civilian">Civilian</span>
-      <span class='nav-item' ui-sref="commercial">Commercial</span>
-      <span class='nav-item' ui-sref="guilds">Guilds</span>
-      <span class='nav-item' ui-sref="science">Science</span>
-      <span class='nav-item' ui-sref="results">Results</span>
+      <span class='nav-item player-bgc' ui-sref-active="active" ui-sref="players">Players</span>
+      <span class='nav-item military' ui-sref-active="active" ui-sref="military">Military</span>
+      <span class='nav-item treasury' ui-sref-active="active" ui-sref="treasury">Treasury</span>
+      <span class='nav-item wonder' ui-sref-active="active" ui-sref="wonder">Wonder</span>
+      <span class='nav-item civilian' ui-sref-active="active" ui-sref="civilian">Civilian</span>
+      <span class='nav-item commercial' ui-sref-active="active" ui-sref="commercial">Commercial</span>
+      <span class='nav-item guilds' ui-sref-active="active" ui-sref="guilds">Guilds</span>
+      <span class='nav-item science' ui-sref-active="active" ui-sref="science">Science</span>
+      <span class='nav-item results' ui-sref-active="active" ui-sref="results">Results</span>
     </nav>
   </header>
 </div>
