--- a/client/app.css
+++ b/client/app.css
@@ -1,4 +1,7 @@
 /* app css stylesheet */
+body {
+  line-height: 1.5;
+}
 
 /* nav */
 
@@ -27,9 +30,6 @@
   border-bottom: 5px solid rgba(255, 255, 255, 0.5);
 }
 
-header {
-  /*background: #152637*/;
-}
 .nav-container {
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
 }
@@ -38,50 +38,29 @@ header {
   font-size: 14px;
   color: white;
   padding: 13px 16px 12px;
+  box-shadow: inset 0px 2px 2px rgba(0,0,0, .2);
 }
 
 .nav-item:not(:last-child) {
   border-right: 1px solid rgba(114, 124, 135, 0.2);
 }
 
-/** {
-  box-sizing: border-box;
-}*/
-
-body {
-  /*margin: 5% auto;*/
-  /*color: #64cce3;*/
-  line-height: 1.5;
-}
-
-
 .title {
-  margin: 24px 0 6px;
-  padding: 0 20px;
+  padding: 20px;
   text-transform: uppercase;
   letter-spacing: .2em;
-  color: #999;
+  color: white;
 }
-/* end of nav*/
 
+/**** end of nav  *****/
 
+/***** player table *****/
 .points {
 	width: 30px; 
 }
 
-.player-table {
-
-}
-
-.player-table-row div {
-  
-  /*text-align: left;*/
-}
-
 .player-table-head {
-  /*background-color: #2c7ac9;*/
   color: white;
-  /*text-align: left;*/
 }
 
 .player-table-head-cell {
@@ -101,6 +80,8 @@ body {
   width: 50px;
   color: black;
 }
+
+/****  end player table ****/
 .modal {
   padding: 10px;
 }
@@ -138,47 +119,8 @@ body {
   background-color: #3f3c3c;
 }
 
-/*
-swipe
-.view-animate-container {
-  position:relative;
-  height:100px!important;
-  background:white;
-  border:1px solid black;
-  height:40px;
-  overflow:hidden;
-}
-
-.view-animate {
-  padding:10px;
-}
-
-.view-animate.ng-enter, .view-animate.ng-leave {
-  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
-
-  display:block;
-  width:100%;
-  position:absolute;
-  top:49px;
-  left:0;
-  right:0;
-  bottom:0;
-  padding:10px;
-}
-
 .view-animate.ng-enter {
-  left:100%;
-}
-.view-animate.ng-enter.ng-enter-active {
-  left:0;
-}
-.view-animate.ng-leave.ng-leave-active {
-  left:-100%;
-}
-
-*/
-.view-animate.ng-enter {
-  transition: 2s linear all;
+  transition: 1s linear all;
   opacity:0;
 }
 
